# python-dev

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: database.py  main.py  models.py
infraestructure/: main.tf
kubernetes/: todo-app-deployment.yaml  todo-app-service.yaml
tests/: test_main.py
