[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-app"
version = "0.1.0"
description = "A simple todo-list web app"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "fastapi>=0.85.0",
    "uvicorn>=0.19.0",
    "sqlalchemy>=1.4.0",
    "pydantic>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.0.260",
    "pre-commit>=2.20.0",
]

[tool.ruff]
select = ["E", "F", "W", "I"]
ignore = ["E203"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
